--- a/lxd-dashboard/images.html
+++ b/lxd-dashboard/images.html
@@ -240,7 +240,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
                 </div>
               </div>
               <div class="col-1">
-                <i class="far fa-sm fa-question-circle" title='Select a repository from the configured simplestreams.'></i>
+                <i class="far fa-sm fa-question-circle text-danger" title='(Required) - Select a repository from the configured simplestreams.'></i>
               </div>
 
               <label class="col-3 col-form-label text-right">Image Type:</label>
