--- a/lxd-dashboard/about.html
+++ b/lxd-dashboard/about.html
@@ -21,7 +21,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 <body class="">
   <p>This open source LXD dashboard is developed by LXDWARE and provides a web-based user interface capable of managing multiple LXD servers from a single location.</p>
   <p>
-    <strong>Version</strong>: <span id="versionNumber">v2.1.0</span> <br />
+    <strong>Version</strong>: <span id="versionNumber">v2.2.0</span> <br />
     <strong>License</strong>: AGPL-3.0 <br />
     <strong>URL</strong>: https://lxdware.com <br />
 </p>
@@ -39,7 +39,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
       console.log("Local version: " + versionNumber)
       console.log("Latest GitHub version: " + data[0].tag_name);
       if (data[0].tag_name == versionNumber){
-        $("#updateMessage").text("You are using the lastest release");
+        $("#updateMessage").text("You are using the latest release");
       }
       else {
         $("#updateMessage").text("There is a newer release " + data[0].tag_name + " available");
